Reapply "add loggers"
This reverts commit 578a0fd10f2317bb1395a2ef1a87c4d28b888560.